--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-push-notification": "^1.5.4",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.0",
     "typescript": "^4.9.5",
